2003-06-02  Daniel Henninger  <jadestorm@users.sourceforge.net>

	* src/mod_auth_kerb.c:
	Added save_credentials support.
	Hushed up an warnings at compile time.
	Added krb4 instance/realm specification support.
	Added force_instance support.
	Fixed Kerberos options support.
	Added tmpdir support.
	Added lifetime support.

	* TODO:
	Removed work already completed.

2003-06-01  Daniel Henninger  <jadestorm@users.sourceforge.net>

	* INSTALL:
	Replaced with standard autoconf INSTALL file.

	* NEWS:
	Added alpha2 comment.

	* configure.in:
	Changed AC_INIT to provide more information.

2003-05-29  Daniel Henninger  <jadestorm@users.sourceforge.net>

	* src/mod_auth_kerb.c:
	Combined current work back into a single file.

	* apache1/*:
	* apache2/*:
	* krb4/*:
	* krb5/*:
	Removed since they are replaced by src/mod_auth_kerb.c.

2002-09-06  Daniel Henninger  <daniel@ncsu.edu>

	* apache1/auth_cmds.c:
	* apache1/auth_config.h:
	* apache2/auth_cmds.c:
	* apache2/auth_config.h:
	Added all of the options I currently forsee supporting.

2002-09-05  Daniel Henninger  <daniel@ncsu.edu>

	* apache1/module.c:
	* apache2/module.c:
	Prettied up module config and documented it a tad better.

	* apache1/module.c:
	Added EAPI define check and additional fields.

2002-09-02  Daniel Henninger  <daniel@ncsu.edu>

	* apache1/auth_cmds.c:
	* apache2/auth_cmds.c:
	Added flag parsing for options and finished up first two commands.

	* apache1/auth_config.h:
	* apache2/auth_config.h:
	Added auth config struct.

	* apache1/auth_user.c:
	* apache2/auth_user.c:
	Added fail_status, authoritative, and kerbauthtype functionality.

	* apache1/dir_config.c:
	* apache2/dir_config.c:
	Added defaults for current flags.

2002-09-01  Daniel Henninger  <daniel@ncsu.edu>

	* apache1/auth_cmds.c:
	* apache2/auth_cmds.c:
	Put together everything but flag parsing for the first batch of options.

2002-07-09  Daniel Henninger  <daniel@ncsu.edu>

	* apache1/auth_cmds.c:
	Started various apache config options.
